export const snapshot = {};

snapshot[`Instructions > REMOVE Instruction > should define an REMOVE instruction if the field is an array of nodes, a rule evaluates to an REMOVE instruction and no index is defined for the REMOVE position 1`] = `
[
  {
    field: "modifiers",
    index: 0,
    path: "statements[0]",
    type: "REMOVE",
  },
]
`;

snapshot[`Instructions > REMOVE Instruction > should define an REMOVE instruction if the field is an array of nodes, a rule evaluates to an REMOVE instruction and a numerical index is defined for the REMOVE position 1`] = `
[
  {
    field: "modifiers",
    index: 1,
    path: "statements[0]",
    type: "REMOVE",
  },
]
`;

snapshot[`Instructions > REMOVE Instruction > should define an REMOVE instruction if the field is an array of nodes, a rule evaluates to an REMOVE instruction and a string index is evaluated to an integer for the REMOVE position 1`] = `
[
  {
    field: "modifiers",
    index: 0,
    path: "statements[0]",
    type: "REMOVE",
  },
]
`;
